<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sideloader.PayPalHereLauncher">

    <LinearLayout
        android:id="@+id/invoice_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="2dip"
        android:orientation="vertical"
        android:padding="13dip">

        <TextView
            android:id="@+id/PPHLauncher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/PPHLauncherText"
            style="@android:style/TextAppearance.Medium"
            android:layout_gravity="center"
            android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/item"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invoiceNum" />

                <EditText
                    android:id="@+id/editInvoiceNum"
                    android:layout_width="match_parent"
                    style="@style/item"
                    android:layout_height="wrap_content"
                    android:text="@string/editInvoiceNum" />
            </LinearLayout>


            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/paymentTerms"
                    style="@style/item"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:text="@string/paymentTerms" />

            <EditText
                android:id="@+id/editPaymentTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/item"
                android:text="@string/dueOnReceipt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/item"
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    android:text="@string/discount" />

                <EditText
                    android:id="@+id/editDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/item"
                    android:text="@string/editDiscount" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/currencyCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currencyCode"/>

                <EditText
                    android:id="@+id/editCurrencyCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/item"
                    android:text="@string/editCurrencyCode"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/merchantEmail"
                    style="@style/item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/merchantEmail" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editMerchantEmail"
                    android:text="@string/editMerchantEmail"
                    style="@style/item"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payerEmail"
                    android:text="@string/payerEmail"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editPayerEmail"

                    android:text="@string/editPayerEmail"/>
            </LinearLayout>
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/payerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payerPhone"
                    style="@style/item"/>

                <EditText
                    android:id="@+id/editPayerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editPayerPhone"

                    style="@style/item"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/itemsAdded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemsAdded"
                    style="@style/item"/>

                <TextView
                    android:id="@+id/itemCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemCount"
                    style="@style/item"/>

                <Button
                    android:id="@+id/addItemButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addItemButton"
                    android:onClick="addItem"
                    style="@style/item"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dip"
                    android:layout_gravity="center"
                    android:text="@string/launchPayPalHere"
                    android:onClick="launchPayPalHere"/>
            </LinearLayout>


    </LinearLayout>

</ScrollView>
