<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:columnCount="2"
    tools:context="com.example.sideloader.AddItem">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/addItem"
        android:layout_column="0"
        android:layout_row="0"
        android:paddingBottom="16dp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/name"
        android:layout_column="0"
        android:layout_row="1"

        style="@style/item"
        />
    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        style="@style/item"
        android:hint="Name"
        android:layout_gravity="fill"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="2"

        android:text="@string/description"
        style="@style/item"
        />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:hint="description"
        android:layout_gravity="fill"
        style="@style/item"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="3"

        android:text="@string/unitPrice"
        style="@style/item"
        />

    <EditText
        android:id="@+id/editUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:hint="Price"
        android:layout_gravity="fill"
        style="@style/item"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="4"

        android:text="@string/taxName"
        style="@style/item"
        />

    <EditText
        android:id="@+id/editTaxName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:hint="Tax Name"
        android:layout_gravity="fill"
        style="@style/item"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="5"

        android:text="@string/taxRate"
        style="@style/item"
        />

    <EditText
        android:id="@+id/editTaxRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:hint="Tax Rate"
        android:layout_gravity="fill"
        style="@style/item"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="6"

        android:text="@string/quantity"
        style="@style/item"
        />

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        android:hint="Quantity"
        android:layout_gravity="fill"
        style="@style/item"
        android:inputType="number"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip"

        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/addItem"
        android:onClick="addItem"
        android:background="@color/colorPrimary"
        />

</GridLayout>
